WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193742
<
rdar://problem/27686430
> Revert workaround AVPlayer.setMuted bug on macOS
https://bugs.webkit.org/show_bug.cgi?id=193742
Summary
<rdar://problem/27686430> Revert workaround AVPlayer.setMuted bug on macOS
Benjamin Poulain
Reported
2019-01-23 15:29:04 PST
<
rdar://problem/27686430
> Revert workaround AVPlayer.setMuted bug on macOS
Attachments
Patch
(1.60 KB, patch)
2019-01-23 15:29 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2019-01-23 15:29:40 PST
Created
attachment 359958
[details]
Patch
Benjamin Poulain
Comment 2
2019-01-23 15:29:42 PST
<
rdar://problem/27686430
>
WebKit Commit Bot
Comment 3
2019-01-23 17:44:04 PST
Comment on
attachment 359958
[details]
Patch Clearing flags on attachment: 359958 Committed
r240401
: <
https://trac.webkit.org/changeset/240401
>
WebKit Commit Bot
Comment 4
2019-01-23 17:44:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug