<rdar://problem/27686430> Revert workaround AVPlayer.setMuted bug on macOS https://bugs.webkit.org/show_bug.cgi?id=193742

Reviewed by Eric Carlson.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.h:
The original bug was fixed, see radar: rdar://problem/27686430


Canonical link: https://commits.webkit.org/208268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240401 268f45cc-cd09-0410-ab3c-d52691b4dbfc